--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "snowpack": "^3.8.3"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "date-fns": "^2.23.0",
     "date-fns-tz": "^1.1.6"
   }
